[gd_scene load_steps=4 format=3 uid="uid://cmakwlb4xrdkc"]

[ext_resource type="Script" path="res://code/GeneratePixels.gd" id="1_4b7ca"]
[ext_resource type="Script" path="res://code/pixel_label.gd" id="2_q7bt0"]
[ext_resource type="Script" path="res://views/PictureDisplay/picture_display.gd" id="3_ypx08"]

[node name="GeneratePixels" type="Control" node_paths=PackedStringArray("label", "button", "timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4b7ca")
label = NodePath("Pixels")
button = NodePath("VBoxContainer/Generate")
timer = NodePath("Timer")

[node name="Pixels" type="Label" parent="."]
modulate = Color(0.933333, 0.670588, 0.933333, 1)
self_modulate = Color(0.932511, 0.59242, 0.36308, 1)
top_level = true
layout_mode = 2
offset_right = 1152.0
offset_bottom = 39.0
theme_type_variation = &"HeaderLarge"
text = "Pixels: <value>
"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_q7bt0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PictureDisplay" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_ypx08")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PictureDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3
stretch_mode = 5

[node name="Generate" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
text = "Generate"

[node name="Timer" type="Timer" parent="."]

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="pressed" from="VBoxContainer/Generate" to="." method="_on_generate_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="VBoxContainer/PictureDisplay" method="_on_timer_timeout"]
[connection signal="timeout" from="SaveTimer" to="VBoxContainer/PictureDisplay" method="_on_save_timer_timeout"]
